# paint

./: CMakeLists.txt  main.cpp
include/Square/: Square.h
include/circle/: Circle.h
include/interface/: Interface.hpp
include/rectangle/: Rectangle.h
include/shapes/: Shape.h
include/storage/: Storage.h
include/triangle/: triangle.h
interface/: Interface.cpp  Interface.hpp  interface.cpp  interface.hpp
shapes/: Shape.cpp  Shape.h  shape.h  shape_merge_class.h
shapes/circle/: Circle.cpp  circle.cpp  circle.h
shapes/rectangle/: Rectangle.cpp  Rectangle.h  rectangle.cpp  rectangle.h
shapes/square/: Square.cpp  Square.h  square.cpp  square.h
shapes/triangle/: triangle.cpp  triangle.h
src/: Circle.cpp  Interface.cpp  Rectangle.cpp  Shape.cpp  Square.cpp  Storage.cpp  main.cpp  triangle.cpp
storage/: Storage.cpp  Storage.h
